{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 747,
  "lineage": "1c883226-7e1e-472d-3f9e-ae4ecf549eb3",
  "resources": [
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:security-group/sg-0fcc2a9d8993a6c25",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0fcc2a9d8993a6c25",
            "ingress": [],
            "name": "blueprints-terraform-cluster-20230110111601320900000003",
            "name_prefix": "blueprints-terraform-cluster-",
            "owner_id": "532805286864",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-cluster"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:security-group/sg-098a1741e0dc888f8",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-098a1741e0dc888f8",
            "ingress": [],
            "name": "blueprints-terraform-node-20230110111601347600000004",
            "name_prefix": "blueprints-terraform-node-",
            "owner_id": "532805286864",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-node",
              "kubernetes.io/cluster/blueprints-terraform": "owned"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-node",
              "kubernetes.io/cluster/blueprints-terraform": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3126461718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fcc2a9d8993a6c25",
            "security_group_rule_id": "sgr-0f03b63c16836dfe5",
            "self": false,
            "source_security_group_id": "sg-098a1741e0dc888f8",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2367110781",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fcc2a9d8993a6c25",
            "security_group_rule_id": "sgr-07dd463bb190aaf3d",
            "self": false,
            "source_security_group_id": "sg-098a1741e0dc888f8",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3956281397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fcc2a9d8993a6c25",
            "security_group_rule_id": "sgr-0b0837b50bea6cf83",
            "self": false,
            "source_security_group_id": "sg-098a1741e0dc888f8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2090936865",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098a1741e0dc888f8",
            "security_group_rule_id": "sgr-01df0435afa1cbb92",
            "self": false,
            "source_security_group_id": "sg-0fcc2a9d8993a6c25",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-3104606012",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098a1741e0dc888f8",
            "security_group_rule_id": "sgr-0bbc906a921cfa795",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-1725086242",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098a1741e0dc888f8",
            "security_group_rule_id": "sgr-07e3feae7f2ad532b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-407674671",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-098a1741e0dc888f8",
            "security_group_rule_id": "sgr-0f11bea1ae63a3613",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-119948438",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098a1741e0dc888f8",
            "security_group_rule_id": "sgr-062c6b867f62e66f5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2302789360",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-098a1741e0dc888f8",
            "security_group_rule_id": "sgr-0ee5f4ee8a97b5823",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1351841582",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098a1741e0dc888f8",
            "security_group_rule_id": "sgr-04d0bc485c78bd970",
            "self": false,
            "source_security_group_id": "sg-0fcc2a9d8993a6c25",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2749312351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098a1741e0dc888f8",
            "security_group_rule_id": "sgr-0152f34f49355d030",
            "self": false,
            "source_security_group_id": "sg-0fcc2a9d8993a6c25",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-114683732",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098a1741e0dc888f8",
            "security_group_rule_id": "sgr-08ff04698b8abc6c1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2726972603",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-098a1741e0dc888f8",
            "security_group_rule_id": "sgr-0b399b49bc58e15f7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:network-acl/acl-09b57d69fd83498cc",
            "default_network_acl_id": "acl-09b57d69fd83498cc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09b57d69fd83498cc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "532805286864",
            "subnet_ids": [
              "subnet-01dbef89cbb2070b1",
              "subnet-073f37d119858ef4a",
              "subnet-081308012c87e4c04",
              "subnet-09a54c9a8f9181476",
              "subnet-09c8dd15e21996ef5",
              "subnet-0eb05f1ced17eaa53"
            ],
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-default"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-default"
            },
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:route-table/rtb-0b8c5dee587538f33",
            "default_route_table_id": "rtb-0b8c5dee587538f33",
            "id": "rtb-0b8c5dee587538f33",
            "owner_id": "532805286864",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-default"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:security-group/sg-0a9d36db1f7216351",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a9d36db1f7216351",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "532805286864",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-default"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-default"
            },
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd3c4dde77ae29ae",
            "domain": "vpc",
            "id": "eipalloc-0bd3c4dde77ae29ae",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-78-154-236.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.154.236",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-ap-northeast-2a"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-ap-northeast-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:internet-gateway/igw-0c84889133180e78b",
            "id": "igw-0c84889133180e78b",
            "owner_id": "532805286864",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform"
            },
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd3c4dde77ae29ae",
            "connectivity_type": "public",
            "id": "nat-015652dd498d6c014",
            "network_interface_id": "eni-099497db47a01fd9b",
            "private_ip": "10.1.0.146",
            "public_ip": "52.78.154.236",
            "subnet_id": "subnet-0eb05f1ced17eaa53",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-ap-northeast-2a"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-ap-northeast-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0033cdf092fa6df061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-015652dd498d6c014",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0033cdf092fa6df06",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c84889133180e78b",
            "id": "r-rtb-0fa1a12d82a437f331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa1a12d82a437f33",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:route-table/rtb-0033cdf092fa6df06",
            "id": "rtb-0033cdf092fa6df06",
            "owner_id": "532805286864",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:route-table/rtb-0fa1a12d82a437f33",
            "id": "rtb-0fa1a12d82a437f33",
            "owner_id": "532805286864",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a695226248734e3f",
            "route_table_id": "rtb-0033cdf092fa6df06",
            "subnet_id": "subnet-081308012c87e4c04"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bd09e07e33ed7b8",
            "route_table_id": "rtb-0033cdf092fa6df06",
            "subnet_id": "subnet-09c8dd15e21996ef5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faa34997d8f3b3c0",
            "route_table_id": "rtb-0033cdf092fa6df06",
            "subnet_id": "subnet-09a54c9a8f9181476"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0380c7b2225853b31",
            "route_table_id": "rtb-0fa1a12d82a437f33",
            "subnet_id": "subnet-0eb05f1ced17eaa53"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd590081ef790f2c",
            "route_table_id": "rtb-0fa1a12d82a437f33",
            "subnet_id": "subnet-01dbef89cbb2070b1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9aff9218fabb588",
            "route_table_id": "rtb-0fa1a12d82a437f33",
            "subnet_id": "subnet-073f37d119858ef4a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:subnet/subnet-081308012c87e4c04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081308012c87e4c04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "532805286864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private-ap-northeast-2a",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private-ap-northeast-2a",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:subnet/subnet-09c8dd15e21996ef5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c8dd15e21996ef5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "532805286864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private-ap-northeast-2b",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private-ap-northeast-2b",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:subnet/subnet-09a54c9a8f9181476",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a54c9a8f9181476",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "532805286864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private-ap-northeast-2c",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private-ap-northeast-2c",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:subnet/subnet-0eb05f1ced17eaa53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb05f1ced17eaa53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "532805286864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public-ap-northeast-2a",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public-ap-northeast-2a",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:subnet/subnet-01dbef89cbb2070b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dbef89cbb2070b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "532805286864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public-ap-northeast-2b",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public-ap-northeast-2b",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:subnet/subnet-073f37d119858ef4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073f37d119858ef4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "532805286864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public-ap-northeast-2c",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public-ap-northeast-2c",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09e84bfb983ec467d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:vpc/vpc-09e84bfb983ec467d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-09b57d69fd83498cc",
            "default_route_table_id": "rtb-0b8c5dee587538f33",
            "default_security_group_id": "sg-0a9d36db1f7216351",
            "dhcp_options_id": "dopt-312c575a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e84bfb983ec467d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8c5dee587538f33",
            "owner_id": "532805286864",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}